added first items on storyboard

--- a/Schedule_Planner/Base.lproj/Main.storyboard
+++ b/Schedule_Planner/Base.lproj/Main.storyboard
@@ -15,26 +15,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xNM-JE-cB8">
-                                <rect key="frame" x="74" y="105" width="266" height="46"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s5N-mW-ilL">
+                                <rect key="frame" x="147" y="716" width="121" height="71"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yfM-8c-SdN">
+                                <rect key="frame" x="175" y="134" width="64" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b9X-Gt-u89">
-                                <rect key="frame" x="124" y="713" width="166" height="63"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                <state key="normal" title="Generate"/>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="b9X-Gt-u89" firstAttribute="top" secondItem="xNM-JE-cB8" secondAttribute="bottom" constant="562" id="Gvo-Dl-Pk9"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="b9X-Gt-u89" secondAttribute="trailing" constant="124" id="Jj6-Et-qda"/>
-                            <constraint firstItem="xNM-JE-cB8" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="PCi-DL-sjG"/>
-                            <constraint firstItem="xNM-JE-cB8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="67" id="QBu-OQ-JPU"/>
-                            <constraint firstItem="xNM-JE-cB8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="186" id="cdu-KU-IlY"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="b9X-Gt-u89" secondAttribute="bottom" constant="86" id="hE7-R3-V3N"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yfM-8c-SdN" secondAttribute="trailing" constant="175" id="2jU-0L-QHn"/>
+                            <constraint firstItem="yfM-8c-SdN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="90" id="Q5h-h2-afe"/>
+                            <constraint firstItem="s5N-mW-ilL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="147" id="SLJ-OM-4zA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="s5N-mW-ilL" secondAttribute="bottom" constant="75" id="Ztr-F0-hTZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="s5N-mW-ilL" secondAttribute="trailing" constant="146" id="mfc-Lk-chz"/>
+                            <constraint firstItem="yfM-8c-SdN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="175" id="nGq-El-YcY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
